# session1_monorepo

./: .gitignore  README.md  docker-compose.db.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: README.md  openapi.json  pyproject.toml
apps/api/migrations/: env.py
apps/api/notebooks/: token_demo.ipynb
apps/api/src/api/: config.py  db.py  main.py  seed.py
apps/api/src/api/models/: itinerary.py  itinerary_dto.py  place.py  user.py
apps/api/src/api/routers/: health.py  itineraries.py
apps/api/src/api/services/: embed.py
apps/api/tests/: conftest_db.py  test_api_async.py  test_contract_golden.py  test_contract_health.py  test_contract_itineraries.py  test_contract_openapi.py  test_health.py  test_itineraries.py  test_itinerary_db.py  test_itinerary_validation.py  test_models.py
apps/web/: jest.config.js  package.json  tsconfig.json
apps/web/.next/: app-build-manifest.json  prerender-manifest.json  trace
apps/web/.next/cache/: .rscinfo
apps/web/.next/types/: routes.d.ts
apps/web/__tests__/: navbar.test.tsx  session.test.tsx
apps/web/app/: globals.css
apps/web/app/itineraries/: page.tsx
apps/web/components/: index.ts
apps/web/components/ui/: AppShell.tsx  Card.tsx  Dialog.tsx  PageHeader.tsx  (+1 more)
apps/web/lib/: session.tsx
apps/web/pages/: index.tsx
apps/web/stories/: Button.stories.tsx  Card.stories.tsx  DesignSystemOverview.mdx
docs/decisions/: ADR-0001.md  ADR-0002-frontend-architecture.md
docs/design/: tokens.md
docs/operations/: api-operability.md
docs/qa/: ui-review.md
docs/security/: auth-stub.md
(+22 files in other folders)
