[tool.poetry]
name = "travelg3n-api"
version = "0.1.0"
description = "FastAPI backend for TravelG3n"
authors = ["Mugen101 <your@email.com>"]

[tool.poetry.dependencies]
sqlmodel = "^0.0.16"
sqlalchemy = {version = "^2.0.30", extras = ["asyncio"]}
alembic = "^1.13.1"
psycopg = {version = "^3.1.18", extras = ["binary"]}
python = ">=3.10,<3.14"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = ">=2.6.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
slowapi = "^0.1.8"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
